[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = "test_*"
python_classes = "Test*"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    # Ignore all docstring errors
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"
]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
